--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				<div id="nav">
 					<ul id="mainmenu">
 						<li><a href="#">Home</a></li>
-						<li><a href="#">Inside</a></li>
+						<li><a href="https://sudipto226890.github.io/sudipto">Inside</a></li>
 						<li><a href="#">Menu Item</a></li>
 						<li><a href="#">Menu Item &raquo;</a>
 							<ul>
