--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 					<ul id="mainmenu">
 						<li><a href="#">Home</a></li>
 						<li><a href="https://sudipto226890.github.io/sudipto">Inside</a></li>
-						<li><a href="#">Menu Item</a></li>
+						<li><a href="sss.html">Menu Item</a></li>
 						<li><a href="#">Menu Item &raquo;</a>
 							<ul>
 								<li><a href="#">Dropdown Item</a></li>
